fix: center calligraphy SVG on mobile, adjust spacing

--- a/_sass/klise/_layout.scss
+++ b/_sass/klise/_layout.scss
@@ -254,10 +254,12 @@
   .author-calligraphy {
     display: block;
     height: 3.6em;
-    margin: 0 0 10px 0;
+    margin: 0 0 6px 0;
 
     @include media-query($on-mobile) {
       height: 2.8em;
+      margin-left: auto;
+      margin-right: auto;
     }
   }
 
